--- a/cpp/src/common/CMakeLists.txt
+++ b/cpp/src/common/CMakeLists.txt
@@ -1,7 +1,10 @@
 # common/CMakeLists.txt
 add_library(common STATIC
     network_utils.cpp
+    Logger.cpp
 )
 
 # Ensure the headers in common/ are accessible
 target_include_directories(common PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+
+target_link_libraries(common PRIVATE spdlog::spdlog)
